# deds_week_2

./: Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb  Practicum_3.1_Opdrachten.ipynb  Practicum_3.2_Opdrachten.ipynb  SQLQuery2.sql  SQLQuery3.sql  SQLQuery4.sql  SQLQuery5.sql  SQLQuery6.sql  SQLQuery8.sql  create_database_script.sql  db_connect.ipynb  pyproject.toml  retailer.csv  script.sql  week_4.Opdrachten.ipynb
Databases/GreatOutdoors/: GO_SALES_INVENTORY_LEVELSData.csv
Week 8/: classificatie.ipynb  regressie.ipynb
presentatie_demo/: obj_detection.py
project/src/: db_connection.py  main.py  processing.py  requirements.txt  settings.py  utils.py
project/src/plots/: plot.ipynb  targets.py
week 9/: clustermodel.ipynb
week 9/voorbeeld/: Script_W9_1.ipynb
week_10/: ConsoleApp1.sln  generate_patterns.py
week_10/ConsoleApp1/: HillClimb.cs  NeuralNetwork.csproj  Program.cs  no comments.cs
week_10/ConsoleApp1/Properties/: AssemblyInfo.cs
week_9/: A-priori.ipynb
week_9/voorbeeld/: Script_W9_1.ipynb
