[tool.poetry]
name = "practicum"
version = "0.1.0"
description = ""
authors = ["Godwin, Robbert"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"